form examples updated, stlyed and updated submission form. added radial selection fieldset

--- a/src/styles/DemoList.css
+++ b/src/styles/DemoList.css
@@ -16,6 +16,12 @@
   width: fit-content;
 }
 
+/* Form subsection headings */
+.h4-subheading{
+  margin-top: 2.5rem;
+  margin-bottom: 1rem;
+}
+
 @media (max-width: 600px) {
   .demo-container {
     margin-top: 1.5rem;
