--- a/src/styles/cyber.css
+++ b/src/styles/cyber.css
@@ -4,13 +4,14 @@
 * https://github.com/atlis-ky/cybercss-v1
 *
 * Sections
-* 1. Content sectioning
-* 2. Text content
-* 3. Inline text semantics
-* 4. Image and multimedia
-* 5. Tables
-* 6. Forms
-* 7. Interactive elements
+* 1. Palettes
+* 2. Typography
+* 3. Content Sections
+* 4. Inline text elements
+* 5. Image and multimedia
+* 6. Tables
+* 7. Forms
+* 8. Interactive elements
 *
 */
 
@@ -94,24 +95,6 @@ body {
   color: var(--color-primary);
 }
 
-/* Special Classes */
-.text-gradient {
-  background: linear-gradient(
-    135deg,
-    var(--main-accent) 0%,
-    var(--alt-one) 100%
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  -webkit-box-decoration-break: clone;
-  box-decoration-break: clone;
-}
-
-.cyber-glow {
-  text-shadow: 0 0 10px var(--color-accent), 0 0 20px var(--color-accent);
-}
-
 /* Typography */
 h1,
 h2,
@@ -157,6 +140,10 @@ h6 {
 p {
   margin-bottom: 1rem;
   line-height: 1.6;
+}
+
+.cyber-glow {
+  text-shadow: 0 0 10px var(--color-accent), 0 0 20px var(--color-accent);
 }
 
 /* Content Sectioning */
@@ -315,8 +302,7 @@ i {
 
 /* Image and Multimedia */
 img,
-video,
-audio {
+video {
   max-width: 100%;
   height: auto;
   border-radius: var(--border-radius-large);
