glossary for navigating cyber.css up to date

--- a/src/styles/cyber.css
+++ b/src/styles/cyber.css
@@ -1,17 +1,21 @@
 /**
-* Cyber.css - A modern lightweight CSS framework for use in your own frontends.
-* Version 0.1.0
+* Cyber.css - A modern lightweight CSS framework for use in your own frontends. Have fun!
+* Version 0.1.1
 * https://github.com/atlis-ky/cybercss-v1
 *
-* Sections
-* 1. Palettes
+* Sections Glossary
+* 1. Palettes, Fonts, and Variables
 * 2. Typography
 * 3. Content Sections
-* 4. Inline text elements
-* 5. Image and multimedia
+* 4. Inline text elements + Lists
+* 5. Image and Multimedia
 * 6. Tables
-* 7. Forms
-* 8. Interactive elements
+* 7. Forms + Optgroups
+* 8. Fieldsets
+* 9. Button Styles (Action and Toggle)
+* 10. Variants and Utility Classes
+* 11. Cards
+* 12. Media Queries
 *
 */
 
